# ultronPrototype

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  baselines.json  baselines_4b_q4_in_process.json  baselines_phase0.json  baselines_phase1.json  baselines_phase2.json  baselines_phase3.json  baselines_phase4.json  baselines_phase5.json  baselines_phase7.json  baselines_phase_c0.json  baselines_phase_c1.json  config.yaml  pyproject.toml
.github/workflows/: enforce.yml
.venv-train/: pyvenv.cfg
.venv-train/Scripts/: activate  activate.bat  get_gprof  get_objgraph  numba  undill
config/: settings.py
data/: relay_fun_facts.txt  relay_roasts.txt
data/ollama_compat_test/: Modelfile
docs/: 4b_optimization_plan.md  architecture.md  codebase_structure.md  comprehensive_quality_plan.md  comprehensive_quality_report.md  comprehensive_test_plan.md  comprehensive_test_report.md  config_discovery.md  configuration.md  development.md  error_handling.md  latency_optimizations_V1.md  memory_architecture.md  mobile_node_setup.md  openclaw_browser_setup.md  openclaw_cron_setup.md  openclaw_desktop_automation_setup.md  openclaw_desktop_control_setup.md  openclaw_gaming_mode_setup.md  openclaw_heartbeat_setup.md  openclaw_hooks_setup.md  openclaw_integration.md  openclaw_integration_final_summary.md  openclaw_media_generation_setup.md  openclaw_memory_wiki_setup.md  openclaw_runtime.md  openclaw_telegram_setup.md  operations.md  phase3_5_followup.md  phase_1_summary.md  phase_3_summary.md  phase_4_summary.md  phase_5_summary.md  phase_6_summary.md  routing.md  smoke_test.md  standing_orders.md  system_inventory.md  test_sweep_binding_rules.md  ultron_0_1_baseline.md
docs/twitch_integration/: 00_STATUS.md  FIRST_STREAM_CHECKLIST.md  ULTRON_VIEWER_GUIDE.docx  WAKEUP.md
docs/ultron_1_0/: README.md
firmware/leonardo_ptt/: README.md  leonardo_ptt.ino
kenningVoiceAudio/: README.md
kenningVoiceAudio/scripts/: augment_vocal_reference.py  benchmark_xtts_optimized.py  bulk_evaluate_finetune.py  compare_reference_window.py  corpus.json  corpus_builder.py  generate_bulk_synthetic.py  generate_sanity_samples.py  kenning_filter.py  package_kokoro_corpus.py  parakeet_server.py  test_finetune_checkpoint.py  train_xtts_finetune.py  xtts_server.py
kenningVoiceAudio/searxng_config/: settings.yml
logs/: coding_tasks.jsonl  verifications.jsonl
prompts/coding/: claude_code_adjustment.j2  claude_code_clarification_response.j2  claude_code_correction.j2  claude_code_initial_edit.j2  claude_code_initial_new.j2
scripts/: _2507g_nothink_latency_proof.py  _aggregate_behavior_diff.py  _bench_llm_http.py  _debug_retrieval_cosine.py  _gen_viewer_guide.js  _merge_phase0_baselines.py  _pool_parity_harness.py  _quality_q10_iter1_verify.py  _quality_q6f_rescore.py  _qwen35_loadtest.py  _qwen35_nothink_proof.py  _qwen35_state_cache_verify.py  _record_phase0_baseline.py  _repeat_degrade_harness.py  _voice_lines_verify.py  audio_diagnostic.py  autonomous_e2e_harness.py  bench_llm_prefix_cache.py  bench_llm_ubatch.py  bench_stt_latency.py  benchmark.py  benchmark_preflight.py  check_vram.py  cleanup_stale_processes.py  comprehensive_memory_quality.py  comprehensive_search_blending.py  comprehensive_test_harness.py  download_models.py  dump_session.py  embedder_server.py  eval_harness.py  list_audio_devices.py  maintenance.py  measure_baseline.py  measure_baseline_extended.py  migrate_embeddings.py  migrate_memory_to_qdrant.py  ptt_agent.py  ptt_test.py  quality_harness.py  (+25 more)
scripts/relay_test/: _cmd_concrete.py  _render_25k_chunks.py  audio_channel_test.py  audit_trace.py  battery_cmds.txt  blip_diag.py  (+21 more)
skills/: README.md  coding.md  gaming.md  image_gen.md  memory_notes.md  security.md  system_status.md
tests/: conftest.py  test_addressing.py  test_addressing_third_party_possessive.py  test_anchors.py  test_architect_narrator.py  test_ast_metadata.py  test_audio.py  test_audio_capture_status.py  test_block_and_revise.py  test_block_and_revise_dispatcher_wiring.py  test_canonical_monitor.py  test_canonical_monitor_runner_wiring.py  test_channels.py  test_coding_bridge.py  test_coding_e2e.py  test_coding_hybrid_dispatch.py  test_coding_intent.py  test_coding_intent_adjustment_second_person.py  test_coding_intent_phase2.py  test_coding_projects.py  test_coding_run_launch.py  test_coding_runner.py  test_coding_runner_anchors.py  test_coding_runner_ast_syntax.py  test_coding_templates.py  test_coding_voice.py  test_coding_voice_desktop_native.py  test_coding_voice_mcp_loop.py  test_compression.py  test_context_scoring.py  test_conversational_ack.py  test_coordinator.py  test_correction_loop.py  test_deep_research.py  test_diagnostics_gating.py  test_draft_model.py  test_duration_control.py  test_effective_config_log.py  test_embeddings_swap.py  test_eval_harness.py  (+105 more)
training/: download_training_data.py  kenning_model.yaml  my_model.yaml  probe_datasets.py  run_training.py  smoketest_memory.py  smoketest_orchestrator.py  validate_wake_model.py
ultronVoiceAudio/: README.md
(+1160 files in other folders)
